[package]
name = "soda"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
overflow-checks = true
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3
debug = false
strip = true
codegen-units = 1